# waves_code

./: .gitignore  README.md  build_system_v2_modified.m  flexible_surferbot_v2_modified.m  solve_FHN_pde_2D.m  solve_fhn.m
.codex/: rules.toml
Julia/: CODEBASE_MAP.md  Manifest.toml  Project.toml  check_fd.jl  check_fd_2.jl
MATLAB/: Diff.m  DtN.m  build_matrices.m  build_matrices_readable.m  build_matrix.m  build_system.m  build_system_v2.m  build_sytem.m  calculate_surferbot_outputs.m  eta_t0.fig  flexible_surferbot.m  flexible_surferbot_v2.asv  flexible_surferbot_v2.m  gaussian_load.m  phi_imag_t0.fig  plot_one.m  plot_surferbot_run.m  plot_sweep_results.m  plottingvideo.m  prettprint.py  regenerate_manifest.m  run_surferbot_sweep.m  save_surferbot_run.m  solve_tensor_system.m  solver.m  sweeper.m  sweeper_v2.m
docs/: architectural_decisions.md  checklist.md  second_family_brief.md  (+3 more)
python/: pyproject.toml  surferbot.yml
python/experimental/: dispersion.py  jaxAD_example.py  jaxADexample2.py  jaxsparseADexample.py  plotting.ipynb  reshapingexample.py  sparse.ipynb
python/src/surferbot/: DtN.py  DtN_test.py  DtNplayground.ipynb  DtNtester.py  constants.py  equations.md  finite_differences.py  flexible_surferbot.md  flexible_surferbot.py  integration.py  integration_test.py  jaxAD_example.py  load_distribution.py  main_flexible.py  main_flexible2.py  myDiff.py  rigid.py  rigid_surferbot.py  rigidplotting.ipynb  sparse_utils.py  utils.py
python/tests/: test_DtN.py  test_integration.py  test_myDiff.py  test_rigidSolver.py  test_solver.py  test_utils.py
(+632 files in other folders)
